# jt-snake-game

./: Cargo.toml
src/: lib.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json
www/public/: index.js
