[package]
name = "jt-snake-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"


#cdylib is good to integrate with libraries such as C++, 
[lib]
crate-type = ["cdylib", "rlib"]